Closed
Bug 1293584
Opened 9 years ago
Closed 6 years ago
CSS "word-break: keep-all;" fails to break the text at CJK punctuations
Categories
(Core :: Layout: Text and Fonts, defect, P3)
Tracking
()
RESOLVED
FIXED
mozilla74
| Tracking | Status | |
|---|---|---|
| firefox74 | --- | fixed |
People
(Reporter: danny0838, Assigned: jfkthame)
References
(Blocks 1 open bug)
Details
(Keywords: css3)
Attachments
(4 files)
User Agent: Mozilla/5.0 (Windows NT 6.1; WOW64; rv:48.0) Gecko/20100101 Firefox/48.0
Build ID: 20160726073904
Steps to reproduce:
See the attachment issue_demo.html.
According to CSS3 spec, a CJK punctuation char, such as ",", "。", etc, should be a candidate for word break when "word-break: keep-all;" is declared. Both IE and Chrome implement "word-break: keep-all;" in this way, but Firefox does not.
Actual results:
The text is never wrapped at a CJK punctuation such as ",", "。", etc.
Expected results:
The text should be wrapped at a CJK punctuation, such as ",", "。", etc, if it exceeds the element width.
Summary: CSS "word-break: keep-all;" fails to break at CJK punctuations → CSS "word-break: keep-all;" fails to break the text at CJK punctuations
Attachment #8779227 -
Attachment description: Expected behavior: text breakable at CJK punctuatons → Expected behavior: text wrappable at CJK punctuatons
Attachment #8779228 -
Attachment description: Actual behavior: text not breakable at CJK punctuatons → Actual behavior: text not wrappable at CJK punctuatons
Updated•9 years ago
|
Blocks: line-breaking
Comment 3•9 years ago
|
||
work-break was added by bug 249159
。 (U+3002) is mentioned bug 249159 comment #40
Status: UNCONFIRMED → NEW
Component: Untriaged → CSS Parsing and Computation
Ever confirmed: true
Product: Firefox → Core
See Also: → 249159
Updated•9 years ago
|
Updated•9 years ago
|
Priority: -- → P3
| Assignee | ||
Comment 4•6 years ago
|
||
Updated•6 years ago
|
Assignee: nobody → jfkthame
Status: NEW → ASSIGNED
Pushed by jkew@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/cf48dfafa73c
Fix implementation of word-break:keep-all to better follow the spec. r=m_kato
Comment 7•6 years ago
|
||
| bugherder | ||
Status: ASSIGNED → RESOLVED
Closed: 6 years ago
status-firefox74:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla74
You need to log in
before you can comment on or make changes to this bug.
Description
•