Bug 1293584 - Fix implementation of word-break:keep-all to better follow the spec. r=m_kato

Differential Revision: https://phabricator.services.mozilla.com/D60275

--HG--
extra : moz-landing-system : lando